--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ djangorestframework = "*"
 pillow = "*"
 django-api-admin = "*"
 whitenoise = "*"
+gunicorn = "*"
+waitress = "*"
 
 [dev-packages]
 
